--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,12 @@ dependencies {
 	implementation 'org.slf4j:slf4j-api'
 	// swagger
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
-	//
+	// JavaMailSender
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
+	// thymeleaf
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	// redis
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
