--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.6.0 <3.7.0'
+  sdk: ">=3.6.0 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -32,9 +32,6 @@ dependencies:
     sdk: flutter
   font_awesome_flutter: ^10.5.0 # google 아이콘 사용 위한 패키지
   google_sign_in: ^6.1.5  # google 로그인을 위한 패키지
-  http: ^1.2.1
-  flutter_secure_storage: ^9.0.0
-
   http: ^1.2.1
   flutter_secure_storage: ^9.0.0
 
