--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,148 @@
-# Miscellaneous
+# CMake 관련
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles/
+CMakeScripts/
+Testing/
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps/
+CMakeUserPresets.json
+*-prefix/
+
+# Dart 관련
+.dart_tool/
+.packages
+build/
+pubspec.lock  # 패키지 업데이트를 통제할 경우 주석 해제
+doc/api/
+.env*
+
+# Flutter 관련
+.flutter-plugins
+.flutter-plugins-dependencies
+.fvm/flutter_sdk
+.pub-cache/
+.pub/
+coverage/
+lib/generated_plugin_registrant.dart
+
+# Android 관련
+android/.cxx/
+android/app/.cxx/
+android/app/cxx/
+android/app/**/*.iml
+android/.gradle/
+android/captures/
+android/gradlew
+android/gradlew.bat
+android/key.properties
+android/local.properties
+android/**/GeneratedPluginRegistrant.java
+android/**/gradle-wrapper.jar
+android/gradle.properties
+android/app/proguard-rules.pro
+
+# Android NDK 및 CMake 관련 빌드 파일
+android/app/.cxx/
+android/app/cxx/
+android/app/**/Debug/
+android/app/**/Release/
+android/app/**/arm64-v8a/
+android/app/**/armeabi-v7a/
+android/app/**/x86/
+android/app/**/x86_64/
+android/app/**/*.json
+!!android/app/google-services.json
+android/app/**/*.bin
+android/app/**/*.txt
+android/app/**/*.ninja
+android/app/**/metadata_*.command.txt
+android/app/**/symbol_folder_index.txt
+android/app/**/cmake*
+android/app/**/cache*
+android/app/**/codemodel*
+android/app/**/prefab_*
+android/app/**/directory-*
+android/app/**/index-*.json
+
+# iOS/Xcode 관련 (macOS 개발 환경 파일 무시)
+ios/
+ios/**
+
+# Java 관련
 *.class
 *.log
-*.pyc
-*.swp
-.DS_Store
-.atom/
-.build/
-.buildlog/
-.history
-.svn/
-.swiftpm/
-migrate_working_dir/
+.mtj.tmp/
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+hs_err_pid*
+replay_pid*
 
-# IntelliJ related
+# macOS 관련 (완전히 제외)
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon?
+._*
+.DocumentRevisions-V100/
+.fseventsd/
+.Spotlight-V100/
+.TemporaryItems/
+.Trashes/
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+.AppleDB/
+.AppleDesktop/
+Network Trash Folder/
+Temporary Items/
+.apdisk/
+*.icloud
+
+# Windows 관련
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+*.stackdump
+[Dd]esktop.ini
+$RECYCLE.BIN/
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
+*.lnk
+
+# Gradle 관련
+.gradle/
+gradle/
+**/build/
+!src/**/build/
+gradle-app.setting
+!gradle-wrapper.jar
+!gradle-wrapper.properties
+.gradletasknamecache
+.project
+.classpath
+*.hprof  # Java heap dump
+
+# 기타 공통 제외 항목
+*.log
+*.lock
+*.tmp
+*.swp
+*.swo
+*.bak
+*.orig
 *.iml
 *.ipr
 *.iws
-.idea/
-
-# The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
-# is commented out by default.
-#.vscode/
-
-# Flutter/Dart/Pub related
-**/doc/api/
-**/ios/Flutter/.last_build_id
-.dart_tool/
-.flutter-plugins
-.flutter-plugins-dependencies
-.pub-cache/
-.pub/
-/build/
-
-# Symbolication related
-app.*.symbols
-
-# Obfuscation related
-app.*.map.json
-
-# Android Studio will place build artifacts here
-/android/app/debug
-/android/app/profile
-/android/app/release
