--- a/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
+++ b/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=C:\Src\flutter
-FLUTTER_APPLICATION_PATH=C:\Users\Lenovo\LetMeDrum\frontend
+FLUTTER_ROOT=/Users/guyeojin/flutter
+FLUTTER_APPLICATION_PATH=/Users/guyeojin/Desktop/capstone-2025
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_BUILD_DIR=build
 FLUTTER_BUILD_NAME=1.0.0
