chore: gitignore file 업데이트
자바 홈 경로가 os 별로 달라서 이를 매번 처리해줘야했음. gradle.properties 파일 추적대상에서 제외하여 이 작업이 반복되는 걸 방지함

--- a/android/.gitignore
+++ b/android/.gitignore
@@ -60,3 +60,5 @@ CMakeLists.txt
 cmake_install.cmake
 android/app/src/main/cpp/cmake-build-debug/
 android/app/src/main/cpp/cmake-build-release/
+
+gradle.properties
