--- a/.gitignore
+++ b/.gitignore
@@ -162,6 +162,7 @@ settings.json
 backup
 
 backend-docker
+backend-docker2
 android/build.gradle.kts
 android/settings.gradle.kts
 linux/flutter/generated_plugin_registrant.h
