--- a/user-service/build.gradle
+++ b/user-service/build.gradle
@@ -9,12 +9,16 @@ dependencies {
     implementation project(':common')
     // webflux
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    // web
+    implementation 'org.springframework.boot:spring-boot-starter-web'
     // eureka-client
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     // config client
     implementation 'org.springframework.cloud:spring-cloud-config-client'
     // jpa
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    // mvc-ui
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
     // mysql
     runtimeOnly 'com.mysql:mysql-connector-j'
     // test
