--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,15 +17,15 @@ services:
     restart: always
     environment:
       <<: *common-variables
-      ENV_AUTH_GOOGLE_CLIENT_ID: "192735377707-2mo11es6vu2becaaomfrher8dvcdu8qs.apps.googleusercontent.com"
-      ENV_AUTH_GOOGLE_CLIENT_SECRET: "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"
-      ENV_AUTH_GOOGLE_CLIENT_REDIRECT_URI: "http://localhost:3000"
     depends_on:
-      - discovery-service
-      - config-server
-      - gateway-service
-      - db
-      - redis
+      discovery-service:
+        condition: service_healthy
+      config-server:
+        condition: service_healthy
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
   user-service:
     build:
       context: .
@@ -35,11 +35,14 @@ services:
     environment:
       <<: *common-variables
     depends_on:
-      - discovery-service
-      - config-server
-      - gateway-service
-      - db
-      - redis
+      discovery-service:
+        condition: service_healthy
+      config-server:
+        condition: service_healthy
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
   verification-service:
     build:
       context: .
@@ -49,11 +52,14 @@ services:
     environment:
       <<: *common-variables
     depends_on:
-      - discovery-service
-      - config-server
-      - gateway-service
-      - db
-      - redis
+      discovery-service:
+        condition: service_healthy
+      config-server:
+        condition: service_healthy
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
   gateway-service:
     build:
       context: .
@@ -65,7 +71,10 @@ services:
     environment:
       <<: *common-variables
     depends_on:
-      - discovery-service
+      discovery-service:
+        condition: service_healthy
+      config-server:
+        condition: service_healthy
   config-server:
     build:
       context: .
@@ -74,6 +83,12 @@ services:
     restart: always
     ports:
       - "28888:8888"
+    healthcheck:
+      test: ["CMD", "curl", "http://config-server:8888/actuator/health" ]
+      interval: 10s
+      retries: 3
+      timeout: 5s
+      start_period: 10s
   discovery-service:
     build:
       context: .
@@ -82,6 +97,12 @@ services:
     restart: always
     ports:
       - "28761:8761"
+    healthcheck:
+      test: ["CMD", "curl", "http://discovery-service:8761/actuator/health"]
+      interval: 10s
+      retries: 3
+      timeout: 5s
+      start_period: 10s
   db:
     image: mysql:8.0
     container_name: database_letmedrum
@@ -96,6 +117,12 @@ services:
     volumes:
       - ./db/mysql/data:/var/lib/mysql
       - ./db/mysql/init:/docker-entrypoint-initdb.d
+    healthcheck:
+      test: [ "CMD", "mysqladmin", "ping", "--host", "db" ]
+      interval: 10s
+      retries: 3
+      timeout: 5s
+      start_period: 10s
   redis:
     image: redis:6.2.6-alpine
     command: redis-server /usr/local/etc/redis/redis.conf
@@ -103,3 +130,9 @@ services:
       - ./redis/data:/data
       - ./redis/config:/usr/local/etc/redis/redis.conf
     restart: always
+    healthcheck:
+      test: [ "CMD", "redis-cli", "ping" ]
+      interval: 10s
+      retries: 3
+      timeout: 5s
+      start_period: 10s
