--- a/.gitignore
+++ b/.gitignore
@@ -163,6 +163,7 @@ backup
 
 backend-docker
 backend-docker2
+backend-docker3
 android/build.gradle.kts
 android/settings.gradle.kts
 linux/flutter/generated_plugin_registrant.h
