--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   google_sign_in: ^6.1.5 # google 로그인을 위한 패키지
   http: ^1.2.1
   flutter_secure_storage: ^9.0.0
+  fl_chart: ^0.70.2 # chart 사용을 위한 패키지
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
