--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,11 @@ services:
       - gateway-service
       - db
       - redis
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://config-server:8888/application/dev" ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
   user-service:
     build:
       context: .
@@ -40,6 +45,11 @@ services:
       - gateway-service
       - db
       - redis
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://config-server:8888/application/dev"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
   verification-service:
     build:
       context: .
@@ -54,6 +64,11 @@ services:
       - gateway-service
       - db
       - redis
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://config-server:8888/application/dev" ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
   gateway-service:
     build:
       context: .
@@ -66,6 +81,11 @@ services:
       <<: *common-variables
     depends_on:
       - discovery-service
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://config-server:8888/application/dev" ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
   config-server:
     build:
       context: .
