--- a/audio-service/build.gradle
+++ b/audio-service/build.gradle
@@ -20,6 +20,8 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-config-client'
     // common module
     implementation project(':common')
+    // websocket
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
     // test
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
