--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,8 @@ flutter:
   assets:
     - assets/images/default_profile.jpg
     - assets/images/drum_kit.jpg
+    - assets/images/image.png
+
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
