--- a/.gitignore
+++ b/.gitignore
@@ -168,3 +168,5 @@ android/build.gradle.kts
 android/settings.gradle.kts
 linux/flutter/generated_plugin_registrant.h
 windows/flutter/generated_plugin_registrant.h
+android/app/build.gradle.kts
+android/app/src/main/kotlin/com/example/temp_project/MainActivity.kt
