--- a/.gitignore
+++ b/.gitignore
@@ -174,3 +174,4 @@ linux/flutter/generated_plugin_registrant.h
 windows/flutter/generated_plugin_registrant.h
 android/app/build.gradle.kts
 android/app/src/main/kotlin/com/example/temp_project/MainActivity.kt
+pubspec.lock
