[feat && refactor] common 모듈을 common, common-auth, common-redis로 분리 - feat 내용 : common 모듈 분리를 위해 AuthConstants를 생성하여 JwtUtils에서 관리하던 상수값들을 관리 - common-redis : redis 저장소 관리에 필요한 기능들을 모아둔 클래스 - common-auth : 사용자 인증 및 jwt 토큰 관리에 필요한 기능들을 모아둔 클래스 - auth-service에 common-auth, common-redis 추가 - verification-service에 common-auth, common-redis 추가 - gateway-service에 common-auth 추가 - user-service에 common-auth 추가

--- a/gateway-service/build.gradle
+++ b/gateway-service/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     // common module
     implementation project(":common")
+    implementation project(":common-auth")
     // eureka
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     // cloud gateway
