--- a/auth-service/build.gradle
+++ b/auth-service/build.gradle
@@ -24,6 +24,8 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-config-client'
     // common module
     implementation project(':common')
+    implementation project(':common-auth')
+    implementation project(':common-redis')
     // test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'com.squareup.okhttp3:mockwebserver:4.12.0'
