[fix] 공통 모듈 빌드 에러 수정 - jar.enabled 추가 ( jar 파일 생성 허용 ) - main 클래스 추가 (main 클래스를 찾지 못하는 문제 해결)

--- a/common-redis/build.gradle
+++ b/common-redis/build.gradle
@@ -9,6 +9,10 @@ repositories {
     mavenCentral()
 }
 
+jar{
+    enabled=true
+}
+
 dependencies {
     // redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
