--- a/common-auth/build.gradle
+++ b/common-auth/build.gradle
@@ -9,6 +9,10 @@ repositories {
     mavenCentral()
 }
 
+jar{
+    enabled=true
+}
+
 dependencies {
     implementation project(':common')
     //Jwt
