--- a/music-service/build.gradle
+++ b/music-service/build.gradle
@@ -16,8 +16,6 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     // eureka-client
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
-    // config client
-    implementation 'org.springframework.cloud:spring-cloud-config-client'
     // jpa
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     // mysql
@@ -40,3 +38,14 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+tasks.register("copyConfig", Copy){
+    from("${rootProject.projectDir}/config-backend/dev/music-service"){
+        include("application.yml")
+    }
+    from("${rootProject.projectDir}/config-backend/dev"){
+        include("common.yml")
+    }
+    into("./src/main/resources")
+}
+processResources.dependsOn(copyConfig)
