[fix] redis 공통 모듈이 git에서 추척되지 않던 문제 해결 + 추적되지 않는 파일들 삭제 - .gitignore에서 redis를 docker-redis로 변경 - docker-compose에서 redis 볼륨 폴더 이름 변경 - settings.gradle에서 config-server 제거

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -130,8 +130,8 @@ services:
     image: redis:6.2.6-alpine
     command: redis-server /usr/local/etc/redis/redis.conf
     volumes:
-      - ./redis/data:/data
-      - ./redis/config:/usr/local/etc/redis/redis.conf
+      - ./docker_redis/data:/data
+      - ./docker_redis/config:/usr/local/etc/redis/redis.conf
     restart: always
     healthcheck:
       test: [ "CMD", "redis-cli", "ping" ]
