--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   http: ^1.2.1
   flutter_secure_storage: ^9.0.0
   fl_chart: ^0.70.2 # chart 사용을 위한 패키지
+  audioplayers: ^5.2.0 # 오디오 재생을 위한 패키지
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -67,6 +68,8 @@ flutter:
     - assets/images/default_profile.jpg
     - assets/images/drum_kit.jpg
     - assets/images/image.png
+    - assets/sounds/metronome_first.wav
+    - assets/sounds/metronome_other.wav
 
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
