악보 및 악보 연습 기능 구현 및 config 파일 관리방식 변경 (#2)
* [feat] music-service 생성
- 연습 정보와 악보 정보 관리하는 서비스

* [fix] User 엔티티 수정
- User 엔티티가 email을 key로 사용하도록 엔티티 수정

* [feat] 악보, 연습 관련 entity와 jpa repository 생성
- 악보 엔티티 생성 (Sheet)
- 사용자별 악보 엔티티 생성 (UserSheet)
- 악보 연습 엔티티 생성 (SheetPractice)
- 패턴 엔티티 생성 (Pattern)
- 패턴 연습 엔티티 생성 (PatternParctice)
- 악보 DB 접근을 위한 객체들 생성 (SheetRepository, UserSheetRepository)
- 악보 연습 DB 접근을 위한 객체 생성 (SheetPracticeRepository)
- 패턴 관련 DB 접근을 위한 객체 생성 (PatternParcticeRepository)

* [feat] 악보 관련 dto와 service 생성
- 사용자 악보 정보 조회를 위한 DTO 생성(SheetResponseDto)
- 사용자 악보 조회 서비스 생성 (SheetRetreiveService - 조회)
- 사용자 악보 관리 서비스 생성 (SheetManageService - 생성, 수정, 삭제)

* [fix] SheetPracticeRepository 에러 수정
- SheetPractice가 UserSheet가 아닌 Sheet와 대다일 관계를 맺던 문제 수정
- findAllByEmailAndSheetId가 UserSheet가 아닌 Sheet의 id로 데이터를 조회하던 문제를 수정

* [fieat] 테스트용 데이터 생성 기능 추가
- userSheet, Sheet, SheetPractice 테스트용 데이터 생성 기능 추가 (FakeDataGenerator)
- UserSheet, Sheet에 getter, setter, builder, all args 생성자 추가

* [feat && refactor] common 모듈을 common, common-auth, common-redis로 분리
- feat 내용 : common 모듈 분리를 위해 AuthConstants를 생성하여 JwtUtils에서 관리하던 상수값들을 관리
- common-redis : redis 저장소 관리에 필요한 기능들을 모아둔 클래스
- common-auth : 사용자 인증 및 jwt 토큰 관리에 필요한 기능들을 모아둔 클래스
- auth-service에 common-auth, common-redis 추가
- verification-service에 common-auth, common-redis 추가
- gateway-service에 common-auth 추가
- user-service에 common-auth 추가

* [fix] dto, entity, repository, service 계층의 에러 수정
- UserSheet : Sheet와 다대일 관계를 맺도록 수정
- SheetResponseDto : 필드명의 모호함으로 인해 SheetId와 UserSheetId를 구분하지 못하던 문제 수정
- UserSheetRepository : findAllByEmail이 @Query에 email값을 넘기지 못하던 문제 수정
- SheetRetrieveService : 연습 기록 조회시 UserSheet가 아닌 Sheet의 id를 인자로 넘기던 문제 수정 ( UserSheet와 Sheet의 통합을 고려할 필요가 있음 )

* [feat] 악보 관리 및 조회를 위한 controller, service, dto 계층 구현
- SheetManageService : 악보 이름 수정, 색상 수정, 일괄 삭제 기능 추가
- SheetManageController : 악보 이름, 색상 수정 기능과 테스트용 기능(/sheets/health) 추가
- SheetRetrieveController : 악보 목록 조회 기능 추가
- SheetListResponseDto : 악보 목록 조회

--- a/gateway-service/build.gradle
+++ b/gateway-service/build.gradle
@@ -16,12 +16,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     // common module
     implementation project(":common")
+    implementation project(":common-auth")
     // eureka
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     // cloud gateway
     implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
-    // config client
-    implementation 'org.springframework.cloud:spring-cloud-config-client'
     // test
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
@@ -30,3 +29,14 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+tasks.register("copyConfig", Copy){
+    from("${rootProject.projectDir}/config-backend/dev/gateway-service"){
+        include("application.yml")
+    }
+    from("${rootProject.projectDir}/config-backend/dev"){
+        include("common.yml")
+    }
+    into("./src/main/resources")
+}
+processResources.dependsOn(copyConfig)
