--- a/settings.gradle
+++ b/settings.gradle
@@ -4,7 +4,10 @@ include 'auth-service'
 include 'verification-service'
 include 'user-service'
 include 'gateway-service'
-include 'config-server'
 include 'discovery-service'
 include 'audio-service'
+include 'music-service'
+include 'common-auth'
+include 'common-auth'
+include 'common-redis'
 
