--- a/user-service/build.gradle
+++ b/user-service/build.gradle
@@ -7,14 +7,13 @@ springBoot {
 dependencies {
     // common module
     implementation project(':common')
+    implementation project(":common-auth")
     // webflux
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     // web
     implementation 'org.springframework.boot:spring-boot-starter-web'
     // eureka-client
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
-    // config client
-    implementation 'org.springframework.cloud:spring-cloud-config-client'
     // jpa
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     // mvc-ui
@@ -30,3 +29,14 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+tasks.register("copyConfig", Copy){
+    from("${rootProject.projectDir}/config-backend/dev/user-service"){
+        include("application.yml")
+    }
+    from("${rootProject.projectDir}/config-backend/dev"){
+        include("common.yml")
+    }
+    into("./src/main/resources")
+}
+processResources.dependsOn(copyConfig)
