--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -5,17 +5,23 @@ plugins {
 }
 
 android {
+    namespace "com.example.capstone_2025"
     compileSdkVersion rootProject.findProperty("android.compileSdkOverride")?.toInteger() ?: 34
 
-
-    namespace = "com.example.capstone_2025"
-
     defaultConfig {
-        applicationId = "com.example.capstone_2025"
-        minSdk = 21  // 최소 SDK 버전
-        targetSdk = 34  // 최신 Android 버전 적용
-        versionCode = 1
-        versionName = "1.0"
+        applicationId "com.example.capstone_2025"
+        minSdkVersion 24
+        targetSdkVersion 34
+        versionCode 1
+        versionName "1.0.0"
+    }
+
+    dependencies {
+        implementation "androidx.annotation:annotation:1.7.1"
+        implementation "androidx.core:core:1.12.0"
+        implementation "androidx.lifecycle:lifecycle-common:2.7.0"
+        implementation "com.google.android.gms:play-services-auth:20.7.0"
+        implementation "com.google.android.material:material:1.11.0"
     }
 
     buildTypes {
