--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,16 @@ dependencies:
   font_awesome_flutter: ^10.5.0 # google 아이콘 사용 위한 패키지
   google_sign_in: ^6.1.5 # google 로그인을 위한 패키지
   http: ^1.2.1
-  flutter_secure_storage: ^9.0.0
+  flutter_secure_storage: ^8.1.0
   fl_chart: ^0.70.2 # chart 사용을 위한 패키지
+  flutter_sound: ^9.2.13
+  just_audio: ^0.9.46
+  audioplayers: ^6.4.0
+  xml: ^6.3.0
+  permission_handler: ^11.0.1
+  web_socket_channel: ^3.0.2
+  flutter_screenutil: ^5.9.0
+  file_selector: ^1.0.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -66,6 +74,10 @@ flutter:
   assets:
     - assets/images/default_profile.jpg
     - assets/images/drum_kit.jpg
+    - assets/test/tom_mix.xml
+    - assets/test/tom_mix.wav
+    - assets/test/music_sheet.png
+    - assets/test/tom_mix.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
