[fix] common 모듈 빌드 문제 수정 - common 모듈 main 클래스 관련 문제 해결을 위해 bootjar.enabled를 disable함 - common 모듈의 main 클래스 삭제

--- a/common-auth/build.gradle
+++ b/common-auth/build.gradle
@@ -9,8 +9,12 @@ repositories {
     mavenCentral()
 }
 
-jar{
-    enabled=true
+bootJar {
+    enabled = false
+}
+
+jar {
+    enabled = true
 }
 
 dependencies {
