feat: 검색 기능 추가 및 UI 개선
- 검색 모드 전환 및 검색 기능 구현
- 앱바에 검색창 UI 추가
- 악보 제목 기반 검색 결과 필터링 기능 구현
- 선택 모드 버튼 UI 둥글게 개선
- 선택 모드에서만 하단 삭제 버튼 표시되도록 수정

--- a/.gitignore
+++ b/.gitignore
@@ -175,3 +175,4 @@ windows/flutter/generated_plugin_registrant.h
 android/app/build.gradle.kts
 android/app/src/main/kotlin/com/example/temp_project/MainActivity.kt
 pubspec.lock
+macos/Flutter/ephemeral/Flutter-Generated.xcconfig
