[fix] git action 코드 오류 수정 및 Dockerfile 수정 (#3)
- Dockerfile 실행시 moduel-*.jar 파일을 생성하도록 수정
- docker-settings.gradle의 루트 프로젝트 이름 수정
- build.gradle에서 UTF-8 인코딩을 수행하도록 수정
- application-test.yml에 테스트용 설정 정보 추가 (gitsubmodule로 이전하는 것도 고려해야할듯)

--- a/build.gradle
+++ b/build.gradle
@@ -77,4 +77,10 @@ subprojects {
 		// actuator
 		implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	}
+
+	tasks.withType(JavaCompile).tap {
+		configureEach {
+			options.encoding = 'UTF-8'
+		}
+	}
 }
