--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,15 +1,17 @@
 on:
   push:
     branches:
-      - main
+      - master
+  pull_request:
+    branches:
+      - master
 
 jobs:
   builds:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        # service: [auth-service, user-service, verification-service, gateway-service, music-service, discovery-service]
-        service: [music-service]
+        service: [auth-service, user-service, verification-service, gateway-service, music-service, discovery-service]
 
     steps:
       # - uses: actions/checkout@v3
