--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,8 @@ jobs:
 
       # - name: gradle setup
       #   uses: gradle/gradle-build-action@v2
-
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
       - name: checkout repo with submodule
         uses: actions/checkout@v3
         with:
