[hotfix] Dockerfile이 잘못된 jar 파일을 가져오는 문제 수정

--- a/music-service/Dockerfile
+++ b/music-service/Dockerfile
@@ -23,7 +23,7 @@ RUN chmod +x gradlew
 RUN ./gradlew clean build --info
 # copy spring boot jar on root dir
 RUN ls module/build/libs
-RUN cp module/build/libs/module-*.jar /app.jar
+RUN cp module/build/libs/${MODULE_NAME}-*.jar /app.jar
 
 # Runtime Stage
 FROM openjdk:17-jdk-slim
