--- a/music-service/Dockerfile
+++ b/music-service/Dockerfile
@@ -5,6 +5,7 @@ ARG MODULE_NAME=music-service
 ARG COMMON_MODULE1="common"
 ARG COMMON_MODULE2="common-auth"
 ARG COMMON_MODULE3="common-redis"
+ARG CONFIG_STORE="config-backend"
 WORKDIR /app
 # copy from root module
 COPY gradlew /app/
@@ -17,10 +18,12 @@ COPY /${MODULE_NAME} /app/module
 COPY /${COMMON_MODULE1} /app/${COMMON_MODULE1}
 COPY /${COMMON_MODULE2} /app/${COMMON_MODULE2}
 COPY /${COMMON_MODULE3} /app/${COMMON_MODULE3}
+# copy submodule
+COPY /${CONFIG_STORE} /app/${CONFIG_STORE}
 # ensure execute gradlew
 RUN chmod +x gradlew
 # build project
-RUN ./gradlew clean build --info
+RUN ./gradlew build --build-cache
 # copy spring boot jar on root dir
 RUN ls module/build/libs
 RUN cp module/build/libs/module-*.jar /app.jar
