--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,7 +73,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/default_profile.jpg
-    - assets/images/drum_kit.jpg
+    - assets/images/drum_kit.png
     - assets/test/tom_mix.xml
     - assets/test/tom_mix.wav
     - assets/test/music_sheet.png
