--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -46,8 +46,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_riverpod: ^2.6.1 # 상태관리를 위한 패키지
   riverpod_annotation: ^2.6.1
-
-
+  stomp_dart_client: ^2.1.3
 
 dev_dependencies:
   flutter_test:
