--- a/frontend/android/app/build.gradle
+++ b/frontend/android/app/build.gradle
@@ -9,11 +9,19 @@ android {
     compileSdkVersion 35
 
     defaultConfig {
-        applicationId = "com.example.capstone_2025"
-        minSdk = 24  // 최소 SDK 버전
-        targetSdk = 35  // 최신 Android 버전 적용
-        versionCode = 1
-        versionName = "1.0"
+        applicationId "com.example.capstone_2025"
+        minSdkVersion 24
+        targetSdkVersion 35
+        versionCode 1
+        versionName "1.0.0"
+    }
+
+    dependencies {
+        implementation "androidx.annotation:annotation:1.7.1"
+        implementation "androidx.core:core:1.12.0"
+        implementation "androidx.lifecycle:lifecycle-common:2.7.0"
+        implementation "com.google.android.gms:play-services-auth:20.7.0"
+        implementation "com.google.android.material:material:1.11.0"
     }
 
     buildTypes {
