--- a/frontend/android/gradle.properties
+++ b/frontend/android/gradle.properties
@@ -1,3 +1,3 @@
-# Enable AndroidX
- android.useAndroidX=true
- android.enableJetifier=true
+org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryError
+android.useAndroidX=true
+android.enableJetifier=true
