--- a/backend/.github/workflows/main.yml
+++ b/backend/.github/workflows/main.yml
@@ -12,40 +12,29 @@ jobs:
     strategy:
       matrix:
         service: [auth-service, user-service, verification-service, gateway-service, music-service, discovery-service]
-
+#        service: [music-service]
     steps:
-      # - uses: actions/checkout@v3
-
-      # - name: Set Up Java 17
-      #   uses: actions/setup-java@v3
-      #   with:
-      #     java-version: 17
-      #     distribution: "temurin"
-
-      # - name: gradle build caching
-      #   uses: actions/cache@v3
-      #   with:
-      #     path: |
-      #       ~/.gradle/caches
-      #       ~/.gradle/wrapper
-      #     key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-      #     restore-keys: |
-      #       ${{ runner.os }}-gradle-
-
-      # - name: gradle setup
-      #   uses: gradle/gradle-build-action@v2
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      - name: checkout repo with submodule
+
+      - name: checkout repo
         uses: actions/checkout@v3
         with:
           token: ${{ secrets.ACCESS_TOKEN }}
-          submodules: true
 
-      # - name: Build :${{ matrix.service }}
-      #   run: |
-      #     chmod +x ./gradlew
-      #     ./gradlew :${{ matrix.service }}:build
+      - name: set config file key
+        run : |
+          SERVICE_NAME=$(echo ${{ matrix.service }} | tr '-' '_' | tr '[:lower:]' '[:upper:]')
+          echo "SERVICE_SECRET=${SERVICE_NAME}_CONFIG" >> $GITHUB_ENV
+
+      - name: copy config files
+        run: |
+          mkdir -p config-backend/dev config-backend/dev/${{ matrix.service }}
+          echo "${{ secrets[env.SERVICE_SECRET] }}" | base64 --decode > config-backend/dev/${{ matrix.service }}/application.yml
+          echo "${{ secrets.COMMON_YML }}" | base64 --decode > config-backend/dev/common.yml
+
+      - name: Set version tag
+        run: echo "VERSION_TAG=$(date +%Y%m%d-%H%M%S)" >> $GITHUB_ENV
 
       - name: Docker Hub Login
         uses: docker/login-action@v3
