[chore] .gitignore에 .idea 추가

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ frontend/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
 frontend/windows/flutter/generated_plugin_registrant.cc
 frontend/windows/flutter/generated_plugin_registrant.h
 frontend/windows/flutter/generated_plugins.cmake
+
+.idea
