[fix] 불필요한 코드 제거 및 빌드 오류 수정 - settings.gradle의 루트 프로젝트 이름 수정 - SheetRepository에서 불필요한 import 제거

--- a/backend/settings.gradle
+++ b/backend/settings.gradle
@@ -1,4 +1,4 @@
-rootProject.name = 'letmedrum'
+rootProject.name = 'backend'
 include 'common'
 include 'auth-service'
 include 'verification-service'
