--- a/backend/music-service/build.gradle
+++ b/backend/music-service/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testImplementation 'com.squareup.okhttp3:mockwebserver:4.12.0'
     testImplementation 'com.h2database:h2'
+    testImplementation 'org.awaitility:awaitility:4.2.0'
 }
 
 test {
