[chore] backend/master에서 test-latest 태그의 이미지를 업로드할 수 있도록 수정

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,7 @@ on:
   push:
     branches:
       - master
+      - backend/master
   pull_request:
     branches:
       - master
@@ -47,6 +48,6 @@ jobs:
           context: backend
           file: backend/${{ matrix.service }}/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/${{ matrix.service }}:tmp
+          tags: ${{ secrets.DOCKER_USERNAME }}/${{ matrix.service }}:test-latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
