[hotfix] music service 빌드 에러 수정

--- a/backend/music-service/Dockerfile
+++ b/backend/music-service/Dockerfile
@@ -31,9 +31,13 @@ RUN cp module/build/libs/module-*.jar /app.jar
 # Runtime Stage
 FROM openjdk:17-jdk-slim
 WORKDIR /app
-# 빌드된 JAR 파일 복사 (JAR 파일이 여러 개일 경우 하나만 선택)
+
 COPY --from=builder ./app.jar app.jar
-# curl 설치
-RUN apt-get update && apt-get install -y curl
+
+# install docker
+RUN apt-get update && \
+    apt-get install -y curl && \
+    curl -fsSL https://get.docker.com | sh
+
 # 컨테이너 실행 명령
 ENTRYPOINT ["java", "-XX:-UseContainerSupport", "-jar", "app.jar"]
