[feat] 사용자 테스트 데이터 생성 기능 추가

--- a/backend/auth-service/build.gradle
+++ b/backend/auth-service/build.gradle
@@ -24,6 +24,9 @@ dependencies {
     implementation project(':common')
     implementation project(':common-auth')
     implementation project(':common-redis')
+    // java-faker
+    implementation ('com.github.javafaker:javafaker:1.0.2') { exclude module: 'snakeyaml' }
+    implementation group: 'org.yaml', name: 'snakeyaml', version: '2.2'
     // test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation platform('org.junit:junit-bom:5.10.0')
