chore: 로고 이미지 파일 asset에 추가

--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -96,6 +96,7 @@ flutter:
     - assets/images/notes/dot_quarter.png
     - assets/sounds/metronome_first.wav
     - assets/sounds/metronome_other.wav
+    - assets/images/appLogo.png
 
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
