[feat] 채점 결과 redis에 저장하는 기능 및 dto 추가 - FinalMeasureResult : 마디별 악보 최종 채점 결과 dto - OnsetMatchResult : 온셋 감지 기반 1차 채점 결과 dto - MeasureScoreManager : redis 기반 채점 결과 관리 기능

--- a/backend/audio-service/build.gradle
+++ b/backend/audio-service/build.gradle
@@ -16,8 +16,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     // eureka-client
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    // redis
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
     // common module
     implementation project(':common')
+    implementation project(':common-redis')
     // stomp
     implementation("org.springframework.boot:spring-boot-starter-websocket")
     // kafka
