[test] audio-service 테스트 코드 추가 - 모델 서버 통신 기능 테스트코드 추가 - 테스트용 redis 설정 추가 - 악보 연습 채점 및 저장 기능 테스트코드 추가 - 악보 채점 테스트 분리

--- a/backend/audio-service/build.gradle
+++ b/backend/audio-service/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testImplementation 'it.ozimov:embedded-redis:0.7.2'
+    testImplementation 'org.springframework.kafka:spring-kafka-test'
 }
 
 test {
