[hotfix] audio-service 빌드시 발생하는 문제 수정 - 임베디드 redis 포트와 문서상 포트를 통일함

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,16 +3,13 @@ on:
     branches:
       - master
       - backend/master
-  pull_request:
-    branches:
-      - master
 
 jobs:
   builds:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        # service: [music-service]
+        # service: [audio-service]
         service: [audio-service, auth-service, user-service, verification-service, gateway-service, music-service, discovery-service]
     steps:
       - name: Set up Docker Buildx
