[hotfix] music-service 빌드 에러 수정 - 특정 데이터 조회하지 못하는 문제 수정 - 테스트 xml 파일을 테스트에서 사용하지 못하던 문제 수정

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        # service: [audio-service]
+        # service: [music-service]
         service: [audio-service, auth-service, user-service, verification-service, gateway-service, music-service, discovery-service]
     steps:
       - name: Set up Docker Buildx
