--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   stomp_dart_client: ^2.1.3
   image: ^4.5.4
   flutter_inappwebview: ^6.0.0
+  http_parser: ^4.0.2
 
 dev_dependencies:
   flutter_test:
