feat: 1차 채점 악보 결과 생성 기능 개발 진행 중

--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -79,6 +79,7 @@ flutter:
     - assets/web/index.html
     - assets/web/js/opensheetmusicdisplay.min.js
     - assets/web/js/fileSelectAndLoadOSMD.js
+    - assets/web/js/detailedScoreRenderer.js
     - assets/music/demo.xml
     - assets/music/test_pattern.xml
     - assets/images/drum_kit.png
