[fix] wav가 아닌 aac 파일을 인식하도록 수정

--- a/model-server/Dockerfile
+++ b/model-server/Dockerfile
@@ -1,10 +1,15 @@
 FROM python:3.9
 
+RUN apt-get -y update && \
+    apt-get install -y ffmpeg
+
 WORKDIR /code
 
 COPY ./requirements.txt /code/requirements.txt
 
 RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
+
+RUN pip list
 
 COPY . /code
 
