--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -57,6 +57,10 @@ dependencies:
   riverpod_generator: ^2.6.5
   riverpod_lint: ^2.6.5
   android_intent_plus: ^5.3.0
+  firebase_core: ^2.24.2
+  flutter_launcher_icons: ^0.14.3
+
+
 
 dev_dependencies:
   flutter_test:
@@ -64,7 +68,7 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   image_picker: ^1.0.7 # 카메라, 앨범에서 사진을 가져오는 패키지
   build_runner: ^2.4.8
-  flutter_launcher_icons: ^0.14.3
+  
 
 flutter_launcher_icons:
   android: "launcher_icon"
