chore: 배포 파일 중 민감한 정보 포함한 파일(fastlane 등) ignore 처리

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -208,3 +208,5 @@ macos/Flutter/ephemeral/Flutter-Generated.xcconfig
 
 .metadata
 android/gradle.properties
+android/fastlane/*
+lib/firebase_options.dart
