feat: 악보상세기록페이지에 코치마크 적용
- 아직 더 수정 해야 함.

--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -60,6 +60,8 @@ dependencies:
   firebase_core: ^2.24.2
   flutter_launcher_icons: ^0.14.3
   flutter_markdown: ^0.6.18
+  showcaseview:
+    path: lib/showcaseview
 
 dev_dependencies:
   flutter_test:
@@ -69,12 +71,12 @@ dev_dependencies:
   build_runner: ^2.4.8
 
 flutter_launcher_icons:
-  android: "launcher_icon"
+  android: 'launcher_icon'
   ios: false
-  image_path: "assets/images/icon.png"
+  image_path: 'assets/images/icon.png'
   min_sdk_android: 21
-  adaptive_icon_background: "#ffffff"
-  adaptive_icon_foreground: "assets/images/icon.png"
+  adaptive_icon_background: '#ffffff'
+  adaptive_icon_foreground: 'assets/images/icon.png'
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
